--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  confetti: ^0.6.0
   provider: ^6.0.2
 
 dev_dependencies:
